--- a/style.css
+++ b/style.css
@@ -1,187 +1,1 @@
-* {
-  text-decoration: none;
-  list-style: none;
-  margin: 0;
-  padding: 0 !important;
-  font-family: "Amiri", serif;
-  outline: 0;
-}
-*::selection {
-  background-color: #77390d38;
-}
-:root {
-  --main-color: #773a0d;
-}
-
-body {
-  background-image: url(./3.avic);
-  background-size: cover;
-}
-.container {
-  gap: 70px;
-}
-
-.container .data .day {
-  color: var(--main-color);
-  text-shadow: 0px 0px 11px var(--main-color);
-}
-
-.container .data ul li {
-  border-radius: 3px 15px;
-  width: 169px !important;
-  border: 1px solid var(--main-color);
-  color: var(--main-color);
-  box-shadow: 0px 0px 10px -1px var(--main-color);
-}
-
-.w-fit {
-  width: fit-content;
-}
-
-.container .tit {
-  width: 211px;
-  cursor: pointer;
-  color: var(--main-color);
-  text-shadow: 0px 0px 11px var(--main-color);
-}
-.container .coun ul,
-.container #country,
-.container form input {
-  background-color: transparent;
-  color: var(--main-color);
-  border: 1px solid var(--main-color);
-  border-radius: 3px 15px;
-  box-shadow: 0px 0px 10px -1px var(--main-color);
-}
-
-.container form input::selection {
-  background-color: var(--main-color);
-}
-
-.container #country {
-  border-radius: 15px;
-  cursor: pointer;
-  transition: border-radius 0.3s;
-  padding: 3px 0 5px !important;
-}
-.container #country::selection {
-  background-color: transparent;
-}
-
-.container .coun ul {
-  border-radius: 0 0 15px 15px;
-  width: 211px;
-  display: none;
-  position: absolute;
-  top: 82px;
-}
-.container .coun ul li::selection {
-  background-color: transparent;
-}
-
-.container .coun ul li:not(:last-child) {
-  border-bottom: 1px solid;
-}
-
-.container .coun ul li {
-  padding: 7px 0 !important;
-  text-align: center;
-  cursor: pointer;
-  transition: backdrop-filter 0.3s;
-}
-
-.container .coun ul li:last-child {
-  border-radius: 0 0 15px 15px;
-}
-
-.container .coun ul li:hover {
-  backdrop-filter: blur(100px);
-}
-
-.container .coun {
-  display: flex;
-}
-.container .done {
-  padding: 7px 40px !important;
-  background-color: transparent;
-  border: 1px solid var(--main-color);
-  color: var(--main-color);
-  font-size: 20px;
-  border-radius: 3px 15px;
-  box-shadow: 0px 0px 10px -1px var(--main-color);
-  cursor: pointer;
-  margin: -60px auto;
-}
-.container .coun ul::after,
-.container #country::after,
-.container .data ul li::after,
-.container form input::after,
-.container .done::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  z-index: -1;
-  border-radius: 3px 15px;
-  backdrop-filter: blur(4px);
-}
-
-@media (min-width: 991px) and (max-width: 1199px) {
-  .container .data ul li {
-    width: 135px !important;
-    padding: 31px !important;
-  }
-}
-@media (min-width: 768px) and (max-width: 990px) {
-  .container .data ul {
-    flex-wrap: wrap;
-  }
-  .container .coun ul {
-    top: 79px;
-  }
-}
-
-@media (max-width: 767px) {
-  .container .data ul {
-    flex-wrap: wrap;
-  }
-  .container .data ul li {
-    width: 135px !important;
-    padding: 31px !important;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 1014px) {
-  body {
-    background-image: url(./5.avic);
-  }
-}
-@media (max-width: 767px) {
-  body {
-    background-image: url(./5.avic);
-    background-size: auto;
-  }
-  .container {
-    padding: 0 10px !important;
-  }
-  .container .coun {
-    flex-direction: column-reverse;
-  }
-  .container form input {
-    width: 100%;
-  }
-  .container .tit {
-    width: 100%;
-    text-align: center !important;
-  }
-  .container .coun ul {
-    width: 100%;
-    position: relative;
-    top: 0;
-  }
-  .done {
-    margin: -60px auto 10px !important;
-  }
-}
+.container .data .day,.container .tit{text-shadow:0 0 11px var(--main-color)}.container #country,.container .coun ul,.container .data ul li,.container .done,.container form input{color:var(--main-color);box-shadow:0 0 10px -1px var(--main-color)}*{text-decoration:none;list-style:none;margin:0;padding:0!important;font-family:Amiri,serif;outline:0}::selection{background-color:#77390d38}:root{--main-color:#773a0d}body{background-image:url(./3.avic);background-size:cover}.container{gap:70px}.container .data .day{color:var(--main-color)}.container .data ul li{border-radius:3px 15px;width:169px!important;border:1px solid var(--main-color)}.w-fit{width:fit-content}.container .tit{width:211px;cursor:pointer;color:var(--main-color)}.container #country,.container .coun ul,.container form input{background-color:transparent;border:1px solid var(--main-color);border-radius:3px 15px}.container .coun ul,.container .coun ul li:last-child{border-radius:0 0 15px 15px}.container form input::selection{background-color:var(--main-color)}.container #country{border-radius:15px;cursor:pointer;transition:border-radius .3s;padding:3px 0 5px!important}.container #country::selection{background-color:transparent}.container .coun ul{width:211px;display:none;position:absolute;top:82px}.container .coun ul li::selection{background-color:transparent}.container .coun ul li:not(:last-child){border-bottom:1px solid}.container .coun ul li{padding:7px 0!important;text-align:center;cursor:pointer;transition:backdrop-filter .3s}.container .coun ul li:hover{backdrop-filter:blur(100px)}.container .coun{display:flex}.container .done{padding:7px 40px!important;background-color:transparent;border:1px solid var(--main-color);font-size:20px;border-radius:3px 15px;cursor:pointer;margin:-60px auto}.container #country::after,.container .coun ul::after,.container .data ul li::after,.container .done::after,.container form input::after{content:"";position:absolute;width:100%;height:100%;left:0;top:0;z-index:-1;border-radius:3px 15px;backdrop-filter:blur(4px)}@media (min-width:991px) and (max-width:1199px){.container .data ul li{width:135px!important;padding:31px!important}}@media (min-width:768px) and (max-width:990px){.container .data ul{flex-wrap:wrap}.container .coun ul{top:79px}}@media (min-width:768px) and (max-width:1014px){body{background-image:url(./5.avic)}}@media (max-width:767px){.container .data ul{flex-wrap:wrap}.container .data ul li{width:135px!important;padding:31px!important}body{background-image:url(./5.avic);background-size:auto}.container{padding:0 10px!important}.container .coun{flex-direction:column-reverse}.container form input{width:100%}.container .tit{width:100%;text-align:center!important}.container .coun ul{width:100%;position:relative;top:0}.done{margin:-60px auto 10px!important}}
